# app/models/profile.rb
@@ -1,0 +1,8 @@
+# frozen_string_literal: true
+
+class Profile < ApplicationRecord
+  belongs_to :user, inverse_of: :profile, class_name: 'Telco::Uam::User'
+  validates :salutation, :firstname, :lastname, :phone, presence: true
+
+  enum salutation: { mr: 'Mr', ms: 'Ms' }
+end
